--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,8 +26,7 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  justify-content: center;
+  padding: 0;
   min-width: 320px;
   min-height: 100vh;
 }
